--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -2,12 +2,18 @@
   "name": "jeff",
   "version": "1.0.0",
   "description": "Just another frontend framework.",
-  "main": "index.js",
+  "main": "dist/jeff.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepack": "npm run build",
+    "build": "rollup -c"
   },
   "keywords": [],
   "author": "Alex Orekhov",
   "license": "ISC",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "rollup": "^4.40.0",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-filesize": "^10.0.0"
+  }
 }
